Changes name classes with BEM

--- a/index.html
+++ b/index.html
@@ -9,45 +9,47 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
-            <a class="logo-link" href="./index.html">
+        <div class="header__container">
+          <div class="header__logo">
+            <a href="./index.html">
               <img src="./img/logo.svg" alt="Логотип Beaty Zone" />
             </a>
-            <ul class="header-menu">
+          </div>
+          <nav class="header__nav">
+            <ul class="header__menu">
               <li>
-                <a class="navigation-link" href="#section-about_us">Про нас</a>
+                <a class="link" href="#section-about">Про нас</a>
               </li>
               <li>
-                <a class="navigation-link" href="#section-choose_us">Чому ми</a>
+                <a class="link" href="#section-privilege">Чому ми</a>
               </li>
               <li>
-                <a class="navigation-link" href="#section-procedures"
-                  >Наші процедури</a
-                >
+                <a class="link" href="#section-procedures">Наші процедури</a>
               </li>
               <li>
-                <a class="navigation-link" href="#section-location">Контакти</a>
+                <a class="link" href="#section-location">Контакти</a>
               </li>
             </ul>
-            <ul class="header-menu-icons">
+          </nav>
+          <nav class="social__nav">
+            <ul class="social__list">
               <li>
-                <a href="#">
-                  <svg class="menu-icon" width="32" height="32">
+                <a class="social__item" href="#">
+                  <svg width="32" height="32">
                     <use href="./img/icons.svg#icon-call"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="#">
-                  <svg class="menu-icon" width="32" height="32">
+                <a class="social__item" href="#">
+                  <svg width="32" height="32">
                     <use href="./img/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li>
-                <a href="#">
-                  <svg class="menu-icon" width="32" height="32">
+                <a class="social__item" href="#">
+                  <svg width="32" height="32">
                     <use href="./img/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
@@ -58,48 +60,51 @@
       </div>
     </header>
     <main>
-      <section class="section hero-section">
+      <section class="hero-section">
         <div class="container">
-          <div class="hero-section-wrapper">
-            <p class="hero-text">Косметологічна клініка</p>
-            <h1 class="hero-title">beauty zone</h1>
+          <div class="hero-section__container">
+            <p class="hero-section__text-name">Косметологічна клініка</p>
+            <h1 class="hero-section__title">beauty zone</h1>
             <button class="button modal-btn-open" type="button">
               Замовити дзвінок
             </button>
-            <p class="consultation-text">
+            <p class="hero-section__text-consultation">
               Запишись та отримай безкоштовну консультацію нашого косметолога
             </p>
           </div>
         </div>
       </section>
-      <section class="section about_us-section" id="section-about_us">
+      <section class="section-about section" id="section-about">
         <div class="container">
-          <div class="about_us-container">
-            <div class="about_us-text-wrapper">
-              <h2 class="section-title about-us-title">
-                Перевтілюйтесь в <span>Beauty Zone!</span>
+          <div class="section-about__container">
+            <div class="section-about__text">
+              <h2 class="section-about__title section__title">
+                Перевтілюйтесь в
+                <span class="section-about__title--blue-color"
+                  >Beauty Zone!</span
+                >
               </h2>
-              <p class="about_us-text">
+              <p class="section-about__text-description">
                 Наша косметологічна клініка пропонує вам професійні послуги з
                 догляду за шкірою обличчя та тіла.
               </p>
-              <p class="about_us-text">
-                B <span>beauty zone</span> ми гарантуємо найвищі стандарти
-                якості та приємний сервіс. Наші косметологічні процедури та
-                препарати допоможуть вам підтримувати свою красу та молодість. З
-                нами краса назавжди!
+              <p class="section-about__text-description">
+                B <span class="text-bold">beauty zone</span> ми гарантуємо
+                найвищі стандарти якості та приємний сервіс. Наші косметологічні
+                процедури та препарати допоможуть вам підтримувати свою красу та
+                молодість. З нами краса назавжди!
               </p>
             </div>
-            <div class="about_us-img-wrapper">
+            <div class="section-about__img-container">
               <img
                 src="./img/face_1.jpg"
                 alt="Обличчя жінки під час процедур"
               />
-              <img class="star_top" src="./img/Star_top.svg" alt="" />
-              <img class="star_middle" src="./img/Star_middle.svg" alt="" />
-              <img class="star_bot" src="./img/Star_bot.svg" alt="" />
+              <img class="star-top" src="./img/Star_top.svg" alt="" />
+              <img class="star-middle" src="./img/Star_middle.svg" alt="" />
+              <img class="star-bot" src="./img/Star_bot.svg" alt="" />
               <img
-                class="about_us-img"
+                class="section-about__img-item"
                 src="./img/face_2.jpg"
                 alt="Обличчя жінки під час процедур"
               />
@@ -107,35 +112,37 @@
           </div>
         </div>
       </section>
-      <section class="section section-choose_us" id="section-choose_us">
+      <section class="section-privilege section" id="section-privilege">
         <div class="container">
-          <h2 class="section-title choose_us-centered">
-            Чому люди <span>обирають нас</span>
+          <h2
+            class="section-privilege__title section__title section__title--centered"
+          >
+            Чому люди<br /><span class="text-brand-blue">обирають нас</span>
           </h2>
-          <div class="choose_us-container">
-            <ul class="choose_us-list">
-              <li class="choose_us-item">
-                <article class="choose_us-card">
-                  <a href="#"><!-- icon call --></a>
-                  <p class="choose_us-text">
+          <div class="section-privilege__container">
+            <ul class="privilege-card__list">
+              <li class="privilege-card__item">
+                <article class="privilege-card__control">
+                  <a href="#"><!-- icon  --></a>
+                  <p class="privilege-card__text">
                     Всі наші косметологи мають вищу медичну освіту та стаж
                     роботи від 5 років
                   </p>
                 </article>
               </li>
-              <li class="choose_us-item">
-                <article class="choose_us-card">
-                  <a href="#"><!-- icon facebook--></a>
-                  <p class="choose_us-text">
+              <li class="privilege-card__item">
+                <article class="privilege-card__control">
+                  <a href="#"><!-- icon --></a>
+                  <p class="privilege-card__text">
                     Використовуємо тільки професійне обладнання та косметику,
                     перевірену часом
                   </p>
                 </article>
               </li>
-              <li class="choose_us-item">
-                <article class="choose_us-card">
-                  <a href="#"><!-- icon instagram--></a>
-                  <p class="choose_us-text">
+              <li class="privilege-card__item">
+                <article class="privilege-card__control">
+                  <a href="#"><!-- icon --></a>
+                  <p class="privilege-card__text">
                     Наша мета - підкреслити переваги та приховати недоліки, а не
                     переробити
                   </p>
@@ -145,46 +152,46 @@
           </div>
         </div>
       </section>
-      <section class="section" id="section-procedures">
+      <section class="section-procedures section" id="section-procedures">
         <div class="container">
-          <h2 class="section-title pocedures-centered">
-            Наші <span>процедури</span>
+          <h2 class="section__title section__title--centered">
+            Наші <span class="text-brand-blue">процедури</span>
           </h2>
-          <div class="procedures-container">
+          <div class="section-procedures__container">
             <button class="carousel-button" type="button">
               <svg width="16" height="16">
                 <use href="./img/icons.svg#icon-Arrow"></use>
               </svg>
             </button>
-            <ul class="procedures-list">
-              <li class="procedures-item">
-                <article class="procedures-card">
+            <ul class="procedures-card__list">
+              <li class="procedures-card__item">
+                <article class="procedures-card__control">
                   <img
-                    class="procedures-image"
+                    class="procedures-card__image"
                     src="./img/procedures_1.png"
                     alt="Процедури"
                   />
-                  <h3 class="procedures-text">Маски для обличчя</h3>
+                  <h3 class="procedures-card__title">Маски для обличчя</h3>
                 </article>
               </li>
-              <li class="procedures-item">
-                <article class="procedures-card">
+              <li class="procedures-card__item">
+                <article class="procedures-card__control">
                   <img
-                    class="procedures-image"
+                    class="procedures-card__image"
                     src="./img/procedures_2.png"
                     alt="Процедури"
                   />
-                  <h3 class="procedures-text">Маски для обличчя</h3>
+                  <h3 class="procedures-card__title">Маски для обличчя</h3>
                 </article>
               </li>
-              <li class="procedures-item">
-                <article class="procedures-card">
+              <li class="procedures-card__item">
+                <article class="procedures-card__control">
                   <img
-                    class="procedures-image"
+                    class="procedures-card__image"
                     src="./img/procedures_3.png"
                     alt="Процедури"
                   />
-                  <h3 class="procedures-text">Маски для обличчя</h3>
+                  <h3 class="procedures-card__title">Маски для обличчя</h3>
                 </article>
               </li>
             </ul>
@@ -196,14 +203,14 @@
           </div>
         </div>
       </section>
-      <section class="section section-location" id="section-location">
+      <section class="section-location section" id="section-location">
         <div class="container">
-          <h2 class="section-title location-title-centered">
-            Як нас <span>знайти</span>
+          <h2 class="section__title section__title--centered">
+            Як нас <span class="text-brand-blue">знайти</span>
           </h2>
-          <div class="location-container">
+          <div class="section-location__container">
             <iframe
-              class="location-map"
+              class="section-location__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.939883433875!2d30.51325798977685!3d50.44222041471427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1735050730243!5m2!1sru!2sua"
               width="605"
               height="481"
@@ -212,17 +219,19 @@
               referrerpolicy="no-referrer-when-downgrade"
             >
             </iframe>
-            <div class="location_form-container">
-              <h3 class="location-form-title">
-                Запишіться <span>безкоштовно </span>та отримайте подарунок
+            <!-- Form -->
+            <div class="section-location__form">
+              <h3 class="section-location__form-title">
+                Запишіться <span class="text-brand-blue">безкоштовно </span>та
+                отримайте подарунок
               </h3>
-              <form name="modal-form" autocomplete="off">
-                <div class="location-form-field">
+              <form name="form" autocomplete="off">
+                <div class="section-location__form-field">
                   <label class="form-label visually-hidden" for="user-name">
                     Ваше ім'я та прізвище
                   </label>
                   <input
-                    class="form-input"
+                    class="form__input"
                     type="text"
                     name="user-name"
                     id="user-name"
@@ -232,12 +241,12 @@
                   />
                 </div>
 
-                <div class="location-form-field">
+                <div class="section-location__form-field">
                   <label class="form-label visually-hidden" for="user-tel">
                     Ваш номер телефону
                   </label>
                   <input
-                    class="form-input"
+                    class="form__input"
                     type="tel"
                     name="user-tel"
                     id="user-tel"
@@ -247,12 +256,12 @@
                   />
                 </div>
 
-                <div class="location-form-field">
+                <div class="section-location__form-field">
                   <label class="form-label visually-hidden" for="user-email">
                     Ваша електронна пошта
                   </label>
                   <input
-                    class="form-input"
+                    class="form__input"
                     type="email"
                     name="user-email"
                     id="user-email"
@@ -261,12 +270,17 @@
                   />
                 </div>
 
-                <button class="location-form-button button" type="submit">
+                <button
+                  class="section-location__form-button button"
+                  type="submit"
+                >
                   Записатись безкоштовно
                 </button>
                 <p class="form-terms">
                   Натискаючи на кнопку я погоджуюсь з
-                  <a href="#">політикою конфіденційності</a>
+                  <a class="form-terms__link" href="#"
+                    >політикою конфіденційності</a
+                  >
                 </p>
               </form>
             </div>
@@ -357,17 +371,18 @@
     <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
-        <h2 class="modal-title">Замовити дзвінок</h2>
-        <p class="modal-text">
-          Запишіться <span>безкоштовно </span>та отримайте подарунок
+        <h2 class="modal__title">Замовити дзвінок</h2>
+        <p class="modal__text">
+          Запишіться <span class="text-brand-blue">безкоштовно </span>та
+          отримайте подарунок
         </p>
-        <form name="modal-form" autocomplete="off">
-          <div class="form-field">
-            <label class="form-label visually-hidden" for="user-name">
+        <form name="modal__form" autocomplete="off">
+          <div class="form__field modal-form__field">
+            <label class="form__label visually-hidden" for="user-name">
               Ваше ім'я та прізвище
             </label>
             <input
-              class="form-input"
+              class="form__input"
               type="text"
               name="user-name"
               id="user-name"
@@ -377,12 +392,12 @@
             />
           </div>
 
-          <div class="form-field">
-            <label class="form-label visually-hidden" for="user-tel">
+          <div class="form__field modal-form__field">
+            <label class="form__label visually-hidden" for="user-tel">
               Ваш номер телефону
             </label>
             <input
-              class="form-input"
+              class="form__input"
               type="tel"
               name="user-tel"
               id="user-tel"
@@ -392,12 +407,12 @@
             />
           </div>
 
-          <div class="form-field">
-            <label class="form-label visually-hidden" for="user-email">
+          <div class="form__field modal-form__field">
+            <label class="form__label visually-hidden" for="user-email">
               Ваша електронна пошта
             </label>
             <input
-              class="form-input"
+              class="form__input"
               type="email"
               name="user-email"
               id="user-email"
@@ -406,12 +421,12 @@
             />
           </div>
 
-          <button class="form-button button" type="submit">
+          <button class="form__button button" type="submit">
             Записатись безкоштовно
           </button>
           <p class="form-terms">
             Натискаючи на кнопку я погоджуюсь з
-            <a href="#">політикою конфіденційності</a>
+            <a class="form-terms__link" href="#">політикою конфіденційності</a>
           </p>
         </form>
       </div>
