Fix map + changed mobile menu + fix slider

--- a/index.html
+++ b/index.html
@@ -66,9 +66,57 @@
             </svg>
           </button>
           <div class="mobile-menu">
-            <button class="mobile-menu__btn-close menu-btn-close" type="button">
-              Close
-            </button>
+            <div class="mobile-menu__container">
+              <button
+                class="mobile-menu__btn-close menu-btn-close"
+                type="button"
+              >
+                <svg width="16" height="16">
+                  <use href="./img/icons.svg#icon-close"></use>
+                </svg>
+              </button>
+              <div class="mobile-menu__logo">
+                <a href="#">
+                  <img src="./img/logo.svg" alt="Логотип Beaty Zone" />
+                </a>
+              </div>
+
+              <nav class="mobile-menu__nav">
+                <ul class="mobile-menu__list">
+                  <li>
+                    <a class="link" href="#section-about">Про нас</a>
+                  </li>
+                  <li>
+                    <a class="link" href="#section-privilege">Чому ми</a>
+                  </li>
+                  <li>
+                    <a class="link" href="#section-procedures"
+                      >Наші процедури</a
+                    >
+                  </li>
+                  <li>
+                    <a class="link" href="#section-location">Контакти</a>
+                  </li>
+                </ul>
+                <div class="mobile-menu__social">
+                  <a class="social__item" href="#">
+                    <svg width="32" height="32">
+                      <use href="./img/icons.svg#icon-call"></use>
+                    </svg>
+                  </a>
+                  <a class="social__item" href="#">
+                    <svg width="32" height="32">
+                      <use href="./img/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a class="social__item" href="#">
+                    <svg width="32" height="32">
+                      <use href="./img/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </div>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
@@ -401,6 +449,16 @@
               </div>
             </div>
           </div>
+          <div class="section-location__map-mobile">
+            <iframe
+              class="section-location__map-mobile"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.939883433875!2d30.51325798977685!3d50.44222041471427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cef8b5f6338d%3A0x25c7f06ad686451c!2z0LHRg9C7LiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgNSwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1735050730243!5m2!1sru!2sua"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            >
+            </iframe>
+          </div>
         </section>
       </div>
     </main>
@@ -498,7 +556,7 @@
     </footer>
 
     <!-- Modal -->
-    <!-- <div class="backdrop is-hidden">
+    <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">
           <svg width="16" height="16">
@@ -564,7 +622,7 @@
           </p>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper-slider.js"></script>
